--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <a class="hero__input--link static" href="#link">Schedule a Demo</a>
                             </label>
                             <a class="hero__mobile--link static" href="#link">Schedule a Demo</a>
-                            <a class="contact__link static" href="#link">
+                            <a class="contact__link " href="#link">
                                 <p class="hero__text">
                                     Have any questions? <span class="bold">Contact Us</span>
                                 </p>
