--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div class="container">
                 <div class="footer-inner footer">
                     <div class="footer__left--content">
-                        <a class="footer__link" href="#link">
+                        <a class="footer__link" href="./">
                             <img class="footer__logo--img" src="./images/footerlogo.svg" width="135" height="38"
                                 alt="site footer logo">
                         </a>
