--- a/index.html
+++ b/index.html
@@ -282,9 +282,8 @@
 
         <!-- Overlay content -->
         <div class="overlay-content">
+            <a href="#">Pricing</a>
             <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
             <a href="#">Contact</a>
         </div>
 
