--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
                     <ol class="header__list">
                         <li class="header__item">
-                            <a class="header__item--link" href="#link">Pricing</a>
+                            <a class="header__item--link" href="./price.html">Pricing</a>
                         </li>
                         <li class="header__item">
-                            <a class="header__item--link" href="#link">About</a>
+                            <a class="header__item--link" href="./about.html">About</a>
                         </li>
                         <li class="header__item">
-                            <a class="header__item--link" href="#link">Contact</a>
+                            <a class="header__item--link" href="./contact.html">Contact</a>
                         </li>
                     </ol>
                 </div>
@@ -229,17 +229,17 @@
                         </a>
                         <ul class="footer__list">
                             <li class="footer__item">
-                                <a class="footer__item--link" href="#link">
+                                <a class="footer__item--link" href="./price.html">
                                     Pricing
                                 </a>
                             </li>
                             <li class="footer__item">
-                                <a class="footer__item--link" href="#link">
+                                <a class="footer__item--link" href="./about.html">
                                     About
                                 </a>
                             </li>
                             <li class="footer__item">
-                                <a class="footer__item--link" href="#link">
+                                <a class="footer__item--link" href="./contact.html">
                                     Contact
                                 </a>
                             </li>
@@ -282,9 +282,9 @@
 
         <!-- Overlay content -->
         <div class="overlay-content">
-            <a href="#">Pricing</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="./price.html">Pricing</a>
+            <a href="./about.html">About</a>
+            <a href="./contact.html">Contact</a>
         </div>
 
     </div>
